# Libro

./: Encuesta.html  Gemfile  PuebasTabs.html  README.md  _config.yml  _toc.yml  conf.py  demostraciones.html  demostraciones.ipynb  genindex.html  intro.html  notebooks.html  objects.inv  prob4.html  py4.html  py4.ipynb  py7.html  requirements.txt  search.html  searchindex.js  setup.cfg
.circleci/: config.yml
.doctrees/: Encuesta.doctree  PuebasTabs.doctree  demostraciones.doctree  environment.pickle  intro.doctree  notebooks.doctree  prob4.doctree  py4.doctree  py7.doctree  tabs.doctree
.github/workflows/: build.yml  main.yml
_build/html/: demostraciones.html  genindex.html  notebooks.html  objects.inv  searchindex.js  tabs.html
_build/html/_sources/: PuebasTabs.ipynb  py4.ipynb  py7.ipynb
_build/jupyter_execute/: Encuesta.ipynb  Encuesta.py  PuebasTabs.ipynb  PuebasTabs.py  demostraciones.ipynb  demostraciones.py  notebooks.ipynb  prob4.ipynb  prob4.py  py4.ipynb  py4.py  py7.ipynb  py7.py
_sources/: Encuesta.ipynb  demostraciones.ipynb
docs/: _config.yml  _toc.yml  demostraciones.ipynb  pre-commit-config.yaml  prob4.ipynb  requirements.txt  setup.cfg
